# trader.exe

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  TODO.md  agentic open api.json  chain.md  docker-compose.yml  env.example  error.html  openapi.json  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements.txt  test_workforce_logging.py  uv_response.txt
.github/workflows/: ci.yml  pylint.yml
api/: main.py  system_registry.py
api/middleware/: __init__.py  auth.py  session.py
api/models/: __init__.py  dex.py  polymarket.py
api/router_registry/: __init__.py  base.py  dex_registry.py  polymarket_registry.py  ui_registry.py
api/routers/: system_settings.py  ui_menu.py
api/routers/dex/: __init__.py  config.py  history.py  logs.py  monitoring.py  ui.py  (+1 more)
core/: __init__.py  agent_context_manager.py  asset_registry.py  blockscout_client.py  config.py  exchange_interface.py  exchange_manager.py  forecasting_client.py  logging.py  observability.py  performance.py  redis_client.py  santiment_client.py  security.py  yahoo_finance_client.py  youtube_transcript_client.py
core/camel_runtime/: __init__.py  compat.py  polymarket_trading_tasks.py  polymarket_workflow_orchestrator.py  registries.py  runtime.py  societies.py  utils.py
core/camel_tools/: __init__.py  api_forecasting_toolkit.py  asknews_toolkit.py  async_wrapper.py  auto_enhancement_toolkit.py  blockscout_toolkit.py  chat_view_toolkit.py  crypto_tools.py  google_research_toolkit.py  guidry_stats_toolkit.py  market_data_toolkit.py  mcp_forecasting_toolkit.py  neo4j_memory_toolkit.py  newsapi_toolkit.py  playwright_toolkit.py  polymarket_data_toolkit.py  polymarket_toolkit.py  report_toolkit.py  review_pipeline_toolkit.py  roi_analyzer_toolkit.py  santiment_toolkit.py  search_toolkit.py  signal_logging_toolkit.py  uviswap_toolkit.py  wallet_analysis_toolkit.py  wallet_review_toolkit.py  watchlist_toolkit.py  yahoo_finance_toolkit.py  youtube_transcript_toolkit.py
core/clients/: __init__.py  base_client.py  blockscout_client.py  cmc_client.py  forecasting_client.py  guidry_stats_client.py  polymarket_client.py  redis_client.py  research_sources_client.py  santiment_client.py  yahoo_finance_client.py  youtube_transcript_client.py
core/exchanges/: dex_exchange.py  mexc_exchange.py
core/indicators/: cmc_client.py
core/llm/: __init__.py  camel_client.py
core/memory/: __init__.py  camel_memory_manager.py  embedding_config.py  graph_memory.py  neo4j_client.py  ollama_embedding.py  qdrant_storage.py  workspace_memory.py
core/mocks/: mock_forecasting_service.py  mock_llm_service.py
core/models/: __init__.py  asset_registry.py  base.py  camel_models.py  chain.py  polymarket.py  strategy.py  workforce.py  workforce_config.py
core/pipelines/: dex_manager.py  manager_base.py  polymarket_manager.py  tool_validator.py  trigger_registry.py
core/prompts/: __init__.py
core/research/: __init__.py  sources.py
core/services/: polymarket_token_registry.py  polymarket_trade_service.py
core/settings/: __init__.py  config.py
core/telemetry/: __init__.py  guidry_stats.py  observability.py
core/utils/: asset_layers.py  decision_formatter.py  dqn_ranking.py  html_formatter.py  performance.py
frontend/static/: app.js  styles.css
frontend/templates/: base.html  chat.html  dashboard.html  dex_dashboard.html  markets.html  orders.html  results.html  settings.html  ui_menu.html  workforce.html
scripts/: build.bat  check-gpu-runtime.sh  create_order.py  deploy.bat  dev.bat  dev.sh  export_agentic_chat_logs.py  extract.json  install-torch-gpu.sh  lint.bat  low_level_client.py  ollama-entrypoint.sh  polymarket_trade_cli.py  prune_database.py  run_dex.bat  run_dex.ps1  run_dex.sh  run_quality_checks.sh  run_tests_docker.sh  test.bat  test.py  test.sh  test_api.bat  test_api.ps1  test_api.sh  test_comprehensive.bat  workforce_mcp_server.py
tests/: TEST_OLLAMA_README.md  __init__.py  clear_redis_test_data.py  conftest.py  test_api_dex_router.py  test_api_main.py  test_api_polymarket_config_logs_trades.py  test_api_polymarket_settings_results.py  test_api_ui_system_routes.py  test_dex_execution_tracker.py  test_dex_trader_service.py  test_dex_trader_workforce.py  test_integration_docker_workflow.py  test_integration_lightweight.py  test_neo4j_memory_toolkit.py  test_polymarket_bet_expert.py  test_polymarket_live_integration.py  test_polymarket_testnet_env.py  test_polymarket_toolkit.py  test_polymarket_trade_service.py  test_polymarket_trading_mcp.py  test_polymarket_workflow.py  test_polymarket_workforce_rss_flux.py  test_pool_spy.py  test_standalone_integration.py  test_uviswap_client.py  test_uviswap_toolkit.py  test_wallet_analysis_toolkit.py  test_watchlist_toolkit.py  test_watchlist_worker.py  test_workers_framework.py  test_workforce_real_integration.py  validate_csv_format.py
(+70 files in other folders)
